RESOLVED FIXED159910
AX: Incorrect behavior for word related text marker functions when there's collapsed whitespace
https://bugs.webkit.org/show_bug.cgi?id=159910
Summary AX: Incorrect behavior for word related text marker functions when there's co...
Nan Wang
Reported 2016-07-18 17:10:45 PDT
When there's collapsed whitespace, we are getting incorrect text marker ranges for words.
Attachments
Initial patch (15.92 KB, patch)
2016-07-18 17:21 PDT, Nan Wang
no flags
patch (15.94 KB, patch)
2016-07-19 08:50 PDT, Nan Wang
no flags
patch (15.94 KB, patch)
2016-07-19 08:52 PDT, Nan Wang
no flags
patch (15.94 KB, patch)
2016-07-19 09:18 PDT, Nan Wang
no flags
patch (15.95 KB, patch)
2016-07-19 10:31 PDT, Nan Wang
no flags
Radar WebKit Bug Importer
Comment 1 2016-07-18 17:11:23 PDT
Nan Wang
Comment 2 2016-07-18 17:11:51 PDT
Nan Wang
Comment 3 2016-07-18 17:21:25 PDT
Created attachment 283964 [details] Initial patch
chris fleizach
Comment 4 2016-07-19 00:11:51 PDT
Comment on attachment 283964 [details] Initial patch View in context: https://bugs.webkit.org/attachment.cgi?id=283964&action=review > Source/WebCore/ChangeLog:8 > + We are getting bad CharacterOffset when there's collapsed whitespace. Added a TraverseOptionValidateOffset getting "a" bad > Source/WebCore/ChangeLog:10 > + fixed word navigation issue based on that. fixed "a" word > Source/WebCore/accessibility/AXObjectCache.cpp:1645 > + // For replaced node without children, we should inluce itself in the range. inluce -> include > Source/WebCore/accessibility/AXObjectCache.cpp:1650 > + if (ec) it looks like the ec case is handled directly below
Nan Wang
Comment 5 2016-07-19 08:50:50 PDT
Created attachment 284009 [details] patch update from review.
Nan Wang
Comment 6 2016-07-19 08:52:07 PDT
Created attachment 284010 [details] patch fixed typo
chris fleizach
Comment 7 2016-07-19 09:08:32 PDT
Comment on attachment 284009 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=284009&action=review > Source/WebCore/accessibility/AXObjectCache.cpp:1590 > + bool cumulateEnough = validateOffset ? cumulativeOffset + lastStartOffset >= offset : cumulativeOffset >= offset; the name of this variable is strange: cumulateEnough what purpose do you want it to serve? it seems like it could be "bool validOffset" > Source/WebCore/accessibility/AXObjectCache.cpp:2307 > + // SimplifiedBackwardsTextIterator ignores replaced element period after this sentence
Nan Wang
Comment 8 2016-07-19 09:12:29 PDT
Comment on attachment 284009 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=284009&action=review >> Source/WebCore/accessibility/AXObjectCache.cpp:1590 >> + bool cumulateEnough = validateOffset ? cumulativeOffset + lastStartOffset >= offset : cumulativeOffset >= offset; > > the name of this variable is strange: cumulateEnough > what purpose do you want it to serve? > > it seems like it could be "bool validOffset" This is to check if we have cumulated enough characters so that we can break early.
Nan Wang
Comment 9 2016-07-19 09:18:06 PDT
Created attachment 284012 [details] patch more review comments
chris fleizach
Comment 10 2016-07-19 10:16:51 PDT
Comment on attachment 284009 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=284009&action=review >>> Source/WebCore/accessibility/AXObjectCache.cpp:1590 >>> + bool cumulateEnough = validateOffset ? cumulativeOffset + lastStartOffset >= offset : cumulativeOffset >= offset; >> >> the name of this variable is strange: cumulateEnough >> what purpose do you want it to serve? >> >> it seems like it could be "bool validOffset" > > This is to check if we have cumulated enough characters so that we can break early. bool offsetLimitReached
Nan Wang
Comment 11 2016-07-19 10:31:24 PDT
Created attachment 284018 [details] patch Changed variable name.
WebKit Commit Bot
Comment 12 2016-07-19 11:14:58 PDT
Comment on attachment 284018 [details] patch Clearing flags on attachment: 284018 Committed r203412: <http://trac.webkit.org/changeset/203412>
WebKit Commit Bot
Comment 13 2016-07-19 11:15:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.